# aeroAR

./: .dockerignore  .env  .gitignore  CNAME  DEPLOY_SSL.md  Dockerfile  README.md  README_FLASK.md  credits.html  docker-compose.prod.yml  docker-compose.yml  docker.ps1  docker.sh  index.html  init-letsencrypt.sh  init-selfsigned.sh  main.py  pyproject.toml  requirements.txt  run.sh  styles.css
Docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
Docker/nginx/conf.d/: app.conf  init.conf
frontend/: credits.html  index.html  previous.html  scan.html  scanner.html
frontend/static/css/: scan.css  styles.css
frontend/static/js/: scan.js  scanner.js
src/: __init__.py  app.py
src/modules/demo/: transcripts.json
src/static/: credits.html  index.html  previous.html  scan.html
src/static/css/: create_module.css  list_modules.css  login.css  scan.css  styles.css  variables.css
src/static/js/: scan.js
src/templates/: create_module.html  glossary.html  index.html  list_modules.html  login_trainee.html  login_trainer.html  scan.html
src/utils/: audio_processor.py  qr_generator.py
tests/: test_audio_processor.py
tools/: generate.py
